# tesebada

dw/: Cargo.toml  solicitudes-clean.csv  solicitudes.csv  transacciones-clean.csv  transacciones.csv
dw/src/: main.rs
dw/typst/: dw.typ
procesamiento-distribuido/: .project  Dockerfile  docker-compose.yml  inventario.sql  settings.gradle  tickets.sql
procesamiento-distribuido/app/: .project  build.gradle
procesamiento-distribuido/app/src/main/java/tec/tesebada/: App.java
procesamiento-distribuido/inventario/: .project  build.gradle
procesamiento-distribuido/inventario/src/main/java/tec/tesebada/: Inventory.java
procesamiento-distribuido/ticketsd/: .project  build.gradle
procesamiento-distribuido/ticketsd/src/main/java/tec/tesebada/: TicketsD.java
procesamiento-distribuido/ticketsh/: .project  build.gradle
procesamiento-distribuido/ticketsh/src/main/java/tec/tesebada/: TicketsH.java
sgbdd/: Cargo.toml  docker-compose.yml  schema.toml
sgbdd/src/: config.rs  connections.rs  cursor.rs  lib.rs  main.rs  parser.rs  token.rs  validations.rs
sgbdd/src/databases/: mod.rs  mongo.rs  neo4j.rs  postgres.rs
