[package]
name = "sgbdd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
mongodb = { version = "3.3.0", features = ["sync"] }
neo4rs = "0.8.0"
serde = { version = "1.0.225", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls-ring-webpki",
  "postgres",
] }
tokio = { version = "1.47.1", default-features = false, features = [
  "rt-multi-thread",
] }
toml = "0.9.6"
